# FastApi

./: .gitignore  Readme.md  pyproject.toml
app/: config.py  database.py  exceptions.py  main.py
app/booking/: DAO.py  models.py  router.py  schemas.py  service.py
app/dao/: base.py
app/hotels/: dao.py  models.py  router.py  schemas.py
app/hotels/rooms/: dao.py  models.py  router.py  schemas.py
app/images/: router.py
app/migrations/: env.py
app/migrations/versions/: 0c36d6ce1345____.py  7a3ea1d73894_initial.py
app/pages/: router.py
app/tasks/: celery.py  email_templates.py  scheduled.py  tasks.py  utils.py
app/tasks/reminders/: bookings.py
app/templates/: hotels.html
app/users/: auth.py  dependencies.py  models.py  router.py  schemas.py
