[tool.poetry]
name = "hotels"
version = "0.1.0"
description = ""
authors = ["bombik815 <bombik815@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
unicorn = {extras = ["standard"], version = "^2.0.1.post1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
