[tool.poetry]
name = "hotels"
version = "0.1.0"
description = ""
authors = ["bombik815 <bombik815@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
unicorn = { extras = ["standard"], version = "^2.0.1.post1" }
pydantic = "^2.7.1"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.30" }
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
python-jose = "^3.3.0"
passlib = "^1.7.4"
bcrypt = "^4.1.3"
exceptiongroup = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
